RESOLVED FIXED310692
[AppKit Gestures] Clicking and dragging on text in a PDF doesn't select it sometimes
https://bugs.webkit.org/show_bug.cgi?id=310692
Summary [AppKit Gestures] Clicking and dragging on text in a PDF doesn't select it so...
Richard Robinson
Reported 2026-03-24 23:00:14 PDT
.
Attachments
Richard Robinson
Comment 1 2026-03-24 23:00:15 PDT
Richard Robinson
Comment 2 2026-03-24 23:01:25 PDT
EWS
Comment 3 2026-03-25 15:17:01 PDT
Committed 309945@main (2aa7f5c4a3d9): <https://commits.webkit.org/309945@main> Reviewed commits have been landed. Closing PR #61308 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.