[AppKit Gestures] Clicking and dragging on text in a PDF doesn't select it sometimes rdar://171653081 https://bugs.webkit.org/show_bug.cgi?id=310692

Reviewed by Abrar Rahman Protyasha.

Don't use selection tracking in PDFs when a synthetic click happens.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::shouldNotTrackSelectionForEvent):
(WebKit::UnifiedPDFPlugin::beginTrackingSelection):
(WebKit::UnifiedPDFPlugin::existingSelectionContainsPoint const):
(WebKit::UnifiedPDFPlugin::handleSyntheticClick):

Canonical link: https://commits.webkit.org/309945@main